fix: always display scrollbar
Fixes #20

--- a/app/globals.css
+++ b/app/globals.css
@@ -54,5 +54,5 @@
 }
 
 body {
-  overflow-y: auto
+  overflow-y: scroll;
 }
